--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -61,7 +61,6 @@
         android:layout_height="match_parent"
         android:src="@drawable/balloon"
         android:scaleType="fitXY"
-        android:padding="10dp"
-        />
+        android:padding="10dp" />
 
 </LinearLayout>
