--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,12 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="start"
+    android:padding="10dp"
+    android:background="@android:color/white"
     android:orientation="vertical"
+    android:clipToPadding="false"
     tools:context=".Dashboard">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logged In" />
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:text="Create Post"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_posts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:clipToPadding="false"
+        android:padding="5dp"/>
+
 </LinearLayout>
