--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="10dp"
+    android:layout_marginTop="25dp"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
 
